--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,12 @@
-@import url("/font/Greconian.ttf");
 @font-face {
   font-family: Greconian;
-  src: url("/font/Greconian.ttf");
+  src: url("../font/Greconian.ttf");
 }
+@font-face {
+  font-family: Copperplate;
+  src: url("../font/Copperplate.ttf");
+}
+
 html {
   scroll-behavior: smooth;
   background-color: rgb(24, 37, 52);
@@ -27,7 +31,7 @@ body {
   max-width: 100vw !important;
 }
 .header {
-  background-image: url("/images/1.png");
+  background-image: url("../images/1.png");
   background-position: center top;
   margin-top: 0;
   padding-top: 0;
@@ -42,9 +46,7 @@ body {
   margin-top: 40px;
 }
 .logo {
-  /* width: 160vh; */
-  width: 360px;
-
+  width: 490px;
   padding: 0;
 }
 .logo:hover {
@@ -52,15 +54,15 @@ body {
   transition: all 0.3s ease;
 }
 .white-btn {
-  width: 310px;
+  width: 370px;
   text-align: center;
-  margin-left: 20px;
+  margin-left: 43px;
   margin-top: 20px;
 }
 .market-btn {
-  width: 270px;
+  width: 330px;
   text-align: center;
-  margin-left: 45px;
+  margin-left: 73px;
   margin-top: 5px;
 }
 .market-btn:hover {
@@ -79,10 +81,8 @@ body {
 }
 .main-social li {
   display: inline;
-  /* margin-left: 5px; */
   margin-right: 30px;
-  /* text-align: center; */
-  font-size: 25px;
+  font-size: 40px;
 }
 .bottom-banner {
   display: flex;
@@ -103,14 +103,14 @@ li i:hover {
   width: 100%;
 }
 .main-content {
-  text-align: left;
   margin-top: 95px;
-  margin-bottom: 55px;
+  margin-bottom: 85px;
 }
 .heading {
   font-weight: normal;
   font-size: 26px;
 }
+
 .section {
   width: 90%;
   max-width: 70em;
@@ -185,12 +185,30 @@ li i:hover {
 }
 .section p {
   font-size: 1.2em;
+
+  font-family: Copperplate;
   opacity: 0.5;
   -webkit-transition: opacity 3s 0.5s cubic-bezier(0.28, 0.16, 0.42, 0.99);
   -o-transition: opacity 3s 0.5s cubic-bezier(0.28, 0.16, 0.42, 0.99);
   transition: opacity 3s 0.5s cubic-bezier(0.28, 0.16, 0.42, 0.99);
   max-width: 38.5em;
+  text-align: center;
+}
+.learn-more {
+  font-size: 1.2em;
+
+  font-family: Copperplate;
+  -webkit-transition: opacity 3s 0.5s cubic-bezier(0.28, 0.16, 0.42, 0.99);
+  -o-transition: opacity 3s 0.5s cubic-bezier(0.28, 0.16, 0.42, 0.99);
+  transition: opacity 3s 0.5s cubic-bezier(0.28, 0.16, 0.42, 0.99);
+  max-width: 38.5em;
   text-align: left;
+  /* text-decoration: none; */
+  color: #fff;
+}
+.learn-more:hover {
+  color: rgb(209, 209, 209);
+  transition: all 0.3s ease-in;
 }
 .section--first {
   background: #000;
@@ -318,5 +336,133 @@ li i:hover {
   animation: moonright 2s linear infinite forwards;
 }
 .content-image img {
+  height: 100vh;
   width: 100% !important;
+}
+.main-footer {
+  display: flex;
+
+  justify-content: center !important;
+}
+.footer {
+  text-align: center;
+  line-height: 20px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: #888888;
+  width: 400px;
+  font-size: 16px;
+}
+.bottom-part {
+  width: 100%;
+  margin-top: 25px;
+  height: 150px;
+}
+
+@media (max-width: 575px) {
+  .bottom-part {
+    /* width: auto; */
+    /* margin-top: -140px; */
+    height: 100px;
+  }
+  .section p {
+    font-size: 1em;
+
+    font-family: Copperplate;
+
+    -webkit-transition: opacity 3s 0.5s cubic-bezier(0.28, 0.16, 0.42, 0.99);
+    -o-transition: opacity 3s 0.5s cubic-bezier(0.28, 0.16, 0.42, 0.99);
+    transition: opacity 3s 0.5s cubic-bezier(0.28, 0.16, 0.42, 0.99);
+    max-width: 38.5em;
+    text-align: center;
+  }
+  .main-content {
+    margin-top: 45px;
+    margin-bottom: 85px;
+  }
+}
+@media (max-width: 768px) {
+  .bottom-part {
+    /* width: auto; */
+    /* margin-top: -140px; */
+    height: 100px;
+  }
+  .title span {
+    font-family: Greconian;
+    font-weight: 700;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 0.22em;
+    line-height: 1.5;
+    font-size: calc(0.7em + 0.7vw);
+    max-width: 90%;
+    margin: 0 auto;
+  }
+  .content-image img {
+    height: auto;
+    width: 100% !important;
+  }
+}
+@media (max-width: 480px) {
+  .title span {
+    font-family: Greconian;
+    font-weight: 700;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 0.22em;
+    line-height: 1.5;
+    font-size: calc(0.6em + 0.6vw);
+    max-width: 90%;
+    margin: 0 auto;
+  }
+  .section p {
+    font-size: 0.8em;
+
+    font-family: Copperplate;
+    text-align: center;
+    -webkit-transition: opacity 3s 0.5s cubic-bezier(0.28, 0.16, 0.42, 0.99);
+    -o-transition: opacity 3s 0.5s cubic-bezier(0.28, 0.16, 0.42, 0.99);
+    transition: opacity 3s 0.5s cubic-bezier(0.28, 0.16, 0.42, 0.99);
+    max-width: 38.5em;
+  }
+
+  .logo {
+    width: 300px;
+
+    padding: 0;
+  }
+  .white-btn {
+    width: 250px;
+    text-align: center;
+    margin-left: 20px;
+    margin-top: 20px;
+  }
+  .market-btn {
+    width: 210px;
+    text-align: center;
+    margin-left: 45px;
+    margin-top: 5px;
+  }
+  .main-content {
+    margin-top: 25px;
+    margin-bottom: 85px;
+  }
+}
+@media (max-width: 375px) {
+  .logo {
+    width: 250px;
+
+    padding: 0;
+  }
+  .white-btn {
+    width: 200px;
+    text-align: center;
+    margin-left: 20px;
+    margin-top: 20px;
+  }
+  .market-btn {
+    width: 160px;
+    text-align: center;
+    margin-left: 45px;
+    margin-top: 5px;
+  }
 }
